example/gateway-api/04-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-app
  namespace: gateway-app
spec:
  parentRefs:
    - name: default-gateway
      namespace: default
  hostnames:
    - gateway-app.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: gateway-app
          port: 80
          weight: 1
